[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
rand = "0.9.2"
trip = { git = "ssh://git@uni.github.com/Totally-Reliable-Imaginary-Planets/TRIP.git", branch = "develop" }
common-game = { git = "ssh://git@uni.github.com/unitn-ap-2025/common.git", branch = "main"}
crossbeam-channel = "0.5.15"
