[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
rand = "0.9.2"
trip = { git = "ssh://git@uni.github.com/Totally-Reliable-Imaginary-Planets/TRIP.git", branch = "feature-ai" }
common-game = { git = "ssh://git@uni.github.com/unitn-ap-2025/common.git", tag = "v2.0.0"}
crossbeam-channel = "0.5.15"

[profile.release]
debug = true
